<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/jobsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_margin="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sp"
                    android:text="@string/subscribe"
                    android:gravity="center_horizontal"
                    style="@style/TextAppearance.AppCompat.SearchResult.Title"/>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancel"
                    android:background="@drawable/ic_cancel"/>
            </LinearLayout>
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/grayText"
                android:id="@+id/name"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/grayText"
                android:inputType="textEmailAddress"
                android:id="@+id/email"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fieldOfInterest"
                android:inputType="text"
                android:textColor="@color/grayText"
                android:id="@+id/fieldInterest"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_margin="@dimen/_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/subscribe"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>