<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.solution.naukarimanthan.ui.launcher.access.login.LoginViewModel" />
    </data>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_launcher"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="@dimen/_18sp"
        android:layout_marginTop="@dimen/_20dp"
        android:paddingLeft="@dimen/_10dp"
        android:paddingStart="@dimen/_10dp"
        android:paddingRight="@dimen/_10dp"
        android:paddingEnd="@dimen/_10dp"/>


    <LinearLayout
        android:layout_marginTop="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="@dimen/_18sp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:onClick="@{() -> data.email()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:background="@drawable/edittext_bg"
            android:drawableEnd="@drawable/ic_email"
            android:drawableRight="@drawable/ic_email"
            android:drawablePadding="@dimen/_8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_12dp"
            android:paddingBottom="@dimen/_12dp"
            android:paddingLeft="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            android:paddingRight="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp"/>
    </FrameLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="@dimen/_18sp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:onClick="@{() -> data.password()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:background="@drawable/edittext_bg"
            android:drawableEnd="@drawable/ic_search"
            android:drawableRight="@drawable/ic_search"
            android:drawablePadding="@dimen/_8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_12dp"
            android:paddingBottom="@dimen/_12dp"
            android:paddingLeft="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            android:paddingRight="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp"/>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_round"
            android:onClick="@{() -> data.onSignIn()}"
            android:text="@string/sign_in"
            android:textColor="@color/white" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/or"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center_horizontal"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signInWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:onClick="@{() -> data.signInWithGoogle()}"
            android:text="@string/signInWithGoogle"
            android:textColor="@color/colorPrimary" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signInWithLinkedIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_border"
            android:onClick="@{() -> data.signInWithLinkedIn()}"
            android:text="@string/signInWithLinkedIn"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <View
        android:layout_marginTop="@dimen/_10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/signUp"
            android:onClick="@{() -> data.onSignUp()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member_yet_create_account"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/blue"
            android:padding="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:paddingLeft="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            android:paddingRight="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp"/>
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_50dp"/>

</LinearLayout>
</android.support.v4.widget.NestedScrollView>
</layout>

<!--
<RelativeLayout
android:visibility="gone"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:focusableInTouchMode="true"
android:orientation="vertical">

<RelativeLayout
    android:id="@+id/topView"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary">

    &lt;!&ndash;<com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/adsBannerSplash" />&ndash;&gt;
</RelativeLayout>

<ScrollView
    android:id="@+id/bottom_panels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/topView"
    android:background="@null"
    android:fillViewport="true"
    android:scrollbars="none">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="top"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_15dp"
                    android:text="@string/welcome_to_catterpillars"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.23" />

            <ImageView
                android:id="@+id/imageView_upper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_4dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginTop="@dimen/_25dp"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/imageView_upper">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3dp"
                    android:layout_marginRight="@dimen/_3dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/countryCode"
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_bg"
                            android:hint="@string/_91"
                            android:inputType="number"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:onClick="@{() -> data.onCountryCode()}"
                            android:paddingLeft="@dimen/_57dp"
                            android:paddingTop="@dimen/_12dp"
                            android:paddingRight="@dimen/_12dp"
                            android:paddingBottom="@dimen/_12dp"
                            android:paddingStart="@dimen/_57dp"
                            android:paddingEnd="@dimen/_12dp"/>

                        <android.support.v7.widget.CardView
                            android:id="@+id/cardView"
                            android:layout_width="45dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_7dp"
                            card_view:cardCornerRadius="@dimen/_4dp"
                            android:layout_marginStart="@dimen/_7dp">

                            <android.support.v7.widget.AppCompatImageView
                                android:id="@+id/flagIcon"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:onClick="@{() -> data.onFlagIcon()}"
                                android:scaleType="fitXY" />
                        </android.support.v7.widget.CardView>
                    </FrameLayout>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/mobile"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3dp"
                        android:layout_marginLeft="@dimen/_3dp"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/mobile_no"
                        android:inputType="number"
                        android:focusable="false"
                        android:onClick="@{() -> data.isValidMobile()}"
                        android:padding="@dimen/_12dp" />
                </LinearLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_marginRight="@dimen/_3dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:focusable="false"
                        android:onClick="@{() -> data.isValidPassword()}"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_bg"
                        android:drawableStart="@drawable/ic_lock_outline_grey_24dp"
                        android:drawableLeft="@drawable/ic_lock_outline_grey_24dp"
                        android:drawablePadding="@dimen/_8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_12dp"
                        android:paddingLeft="@dimen/_12dp"
                        android:paddingTop="@dimen/_12dp"
                        android:paddingEnd="@dimen/_65dp"
                        android:paddingRight="@dimen/_65dp"
                        android:paddingBottom="@dimen/_12dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:onClick="@{() -> data.onForgetPassword()}"
                        android:id="@+id/forgotPass"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right|center_vertical"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="@dimen/_7dp"
                        android:text="@string/forget_password"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimaryDark" />
                </FrameLayout>

                <Button
                    android:onClick="@{() -> data.onLogin()}"
                    android:id="@+id/login"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/_3dp"
                    android:layout_marginTop="@dimen/_25dp"
                    android:layout_marginRight="@dimen/_3dp"
                    android:layout_marginBottom="@dimen/_65dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:gravity="center"
                    android:padding="@dimen/_15dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/signUp"
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/_20dp"
                    android:onClick="onClick"
                    android:padding="@dimen/_5dp"
                    android:text="@string/don_t_have_an_account"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:visibility="gone" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</ScrollView>
</RelativeLayout>
-->
